--- a/index.html
+++ b/index.html
@@ -7,7 +7,30 @@
     <link rel="stylesheet" href="style/style.css">
 </head>
 <body>
-    
+    <header>
+        <h1>Tic Tac Toe</h1>
+    </header>
+<main>
+
+    <section class="board x" id="gameboard">
+        <!--If "circle" or "x" is typed in beside the word cell, will show the css for it-->
+<div class="cell" data-cell></div>
+<div class="cell" data-cell></div>
+<div class="cell" data-cell></div>
+<div class="cell" data-cell></div>
+<div class="cell" data-cell></div>
+<div class="cell" data-cell></div>
+<div class="cell" data-cell></div>
+<div class="cell" data-cell></div>
+<div class="cell" data-cell></div>
+
+<!--if "show" is typed in after winning message, will show a restart button and change the hue of the page-->
+    <div class="winning-message" id="winningMessage">
+        <div data-winning-message-text></div>
+        <button id="restartButton">Restart</button>
+    </div>
+    </section>
+</main>
 </body>
     <script type="text/javascript" src="js/main.js"></script>
 </html>
